# vtr-forensic-img

./: .gitignore  ARCHITECTURE.md  README.md  cli.py
core/: __init__.py  consistency_checker.py  diff_analyzer.py  ela_analyzer.py  entropy_analyzer.py  frequency_analyzer.py  metadata_extractor.py  noise_analyzer.py  provenance_report.py  quantization_analyzer.py  rust_bridge.py  signature_verifier.py  strict_mode.py
rust_parser/: Cargo.toml
rust_parser/src/: main.rs
tests/: conftest.py  test_adversarial.py  test_consistency_checker.py  test_ela_analyzer.py  test_metadata_extended.py  test_metadata_extractor.py  test_pipeline_integration.py  test_rust_bridge.py  test_v020_modules.py
web/: _analysis_worker.py  app.py
